--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="style.css">
   <head>
     <meta charset="utf-8">
+    <title>Matt Lopez | About Me</title>
   </head>
   <body>
     <nav>
